<resources>
    <string name="app_name">MemeShare</string>
    <string name="next">NEXT</string>
    <string name="share">SHARE</string>
    <string name="mobile_number">mobile number</string>
    <string name="enter_password">enter password</string>
    <string name="log_in">log in</string>
    <string name="forget_password">forget password</string>
    <string name="register_urself">register_urself</string>
    <string name="preference_file_name">Avengers Preferences</string>
</resources>